tests/invalid/numbers/no_space.rs
/*
fail: 1
*/

main(): i32 {
    return0;
}